<resources>
    <string name="app_name">Show grid</string>
    <string name="labels_visible">Labels Visible</string>
    <string name="grid_color">Grid Color</string>
    <string name="label_color">Label Color</string>
    <string name="grid_type">Grid Type</string>
    <string name="change_grid_button">Grid Options</string>
    <string name="label_position">Label Position</string>
    <string-array name="layers_array">
        <item>Lat and Long</item>
        <item>MGRS Grid</item>
        <item>UTM Grid</item>
        <item>USNG Grid</item>
    </string-array>
    <string-array name="colors_array">
        <item>Red</item>
        <item>White</item>
        <item>Blue</item>

    </string-array>

    <string-array name="positions_array">
        <item>AllSides</item>
        <item>BottomLeft</item>
        <item>BottomRight</item>
        <item>Center</item>
        <item>Geographic</item>
        <item>TopLeft</item>
        <item>TopRight</item>
    </string-array>
</resources>
